# BLAKE3

./: CMakeLists.txt  README.md
include/: blake3_impl.h
src/: blake3.c  blake3_avx2.c  blake3_avx512.c  blake3_dispatch.c  blake3_portable.c  blake3_sse2.c  blake3_sse41.c
